[package]
name = "ryp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
rust-argon2 = "1.0"
chacha20poly1305 = "0.10.1"
data-encoding = "2.3.3"
dirs = "4.0.0"
ring = "0.16.20"
rpassword = "7.2.0"
